--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -7,7 +7,7 @@
 
               <li>
                 <a target="_blank" rel="noopener noreferrer" 
-                   href="https://appseed.us/admin-dashboards/django-dashboard-material">
+                   href="https://Geodata.us/admin-dashboards/django-dashboard-material">
                    Geo Database Dashboard
                 </a>
               </li>
