--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -11,7 +11,7 @@
   <link rel="" href="">
 
   <title>
-    Geo-Data Management  {% block title %}{% endblock %} | AppSeed
+    Geo-Data Management  {% block title %}{% endblock %} | Geodata
   </title>
   
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      {% include 'includes/footer.html' %}
+      <!-- {% include 'includes/footer.html' %} -->
 
     </div>
   </div>
