--- a/apps/templates/includes/chartsprofile.html
+++ b/apps/templates/includes/chartsprofile.html
@@ -1,7 +1,10 @@
 <div class="row hide" id="2chart">
-    <div class="col-md-6">
+    <div class="col-md-6 chartprofile">
       <div class="card resizable-content">
         <div class="card-body">
+          <div class="input-group no-border hide" id="profile-edit-1">
+            <button class="btn btn-primary" id="drawChart-first-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-first" style="width:100%; height: 90%;"></div>
   
         </div>
@@ -10,6 +13,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-2">
+            <button class="btn btn-primary" id="drawChart-second-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-second" style="width:100%; height: 90%;"></div>
         </div>
       </div>
@@ -19,6 +25,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-3">
+            <button class="btn btn-primary" id="drawChart-third-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-third" style="width:100%; height: 90%;"></div>
   
         </div>
@@ -27,6 +36,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-4">
+            <button class="btn btn-primary" id="drawChart-fourth-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-fourth" style="width:100%; height: 90%;"></div>
         </div>
       </div>
@@ -36,6 +48,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-5">
+            <button class="btn btn-primary" id="drawChart-five-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-five" style="width:100%; height: 90%;"></div>
   
         </div>
@@ -44,6 +59,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-6">
+            <button class="btn btn-primary" id="drawChart-six-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-six" style="width:100%; height: 90%;"></div>
         </div>
       </div>
@@ -53,6 +71,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-7">
+            <button class="btn btn-primary" id="drawChart-seven-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-seven" style="width:100%; height: 90%;"></div>
   
         </div>
@@ -61,6 +82,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-8">
+            <button class="btn btn-primary" id="drawChart-eight-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-eight" style="width:100%; height: 90%;"></div>
         </div>
       </div>
@@ -70,6 +94,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-9">
+            <button class="btn btn-primary" id="drawChart-nine-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-nine" style="width:100%; height: 90%;"></div>
   
         </div>
@@ -78,6 +105,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-10">
+            <button class="btn btn-primary" id="drawChart-ten-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-ten" style="width:100%; height: 90%;"></div>
         </div>
       </div>
@@ -87,6 +117,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-11">
+            <button class="btn btn-primary" id="drawChart-eleven-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-eleven" style="width:100%; height: 90%;"></div>
   
         </div>
@@ -95,6 +128,9 @@
     <div class="col-md-6">
       <div class="card resizable-content">
         <div class="card-body ">
+          <div class="input-group no-border hide" id="profile-edit-12">
+            <button class="btn btn-primary" id="drawChart-twel-apply"><i class="material-icons">draw</i> Draw</button>
+          </div>
           <div id="drawChart-twel" style="width:100%; height: 90%;"></div>
         </div>
       </div>
