--- a/apps/templates/pages/profile/details.html
+++ b/apps/templates/pages/profile/details.html
@@ -26,10 +26,7 @@
   </div>
   <div class="col-md-6">
     <div class="card ">
-      <!-- <a class="nav-link" href="{% url 'add-project-ags' project.id %}" style="display: inline; float: right;">
-        <i class="material-icons">add</i> Add AGS file
-      </a> -->
-      <div class="table-responsive" style="min-height:15vh;  max-height: 18vh;">
+      <div class="table-responsive agstable" style="min-height:15vh;  max-height: 18vh;">
         <table class="table">
           <thead>
             <tr>
@@ -75,16 +72,6 @@
               {% for hole in holetable %}
               <tr>
                 <td class="text-center">{{ forloop.counter }} </td>
-                <!-- <td>
-                  <div class="form-check">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="checkbox" value="" checked="">
-                      <span class="form-check-sign">
-                        <span class="check"></span>
-                      </span>
-                    </label>
-                  </div>
-                </td> -->
                 <td>{{ hole.ags }}</td>
                 <td>{{ hole.LOCA_ID }}</td>
                 <td>{{ hole.longitude }}</td>
@@ -100,7 +87,70 @@
     </div>
   </div>
 </div>
+
+<div class="row hide" id="profile-filter">
+  <div class="col-md-3">
+    <div class="card ">
+      <div class="card-body ">
+        <div class="form-group bmd-form-group is-filled">
+          <select class="form-control datepicker" id="select-ags-file">
+            {% for ags in agsfile %}
+            <option value="{{ ags.id }}">{{ ags.name }}</option>
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="card ">
+      <div class="card-body ">
+        <div class="form-group bmd-form-group is-filled">
+          <select class="form-control datepicker" id="select-variable-first">
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-2">
+    <div class="card ">
+      <div class="card-body ">
+        <div class="form-group bmd-form-group is-filled">
+          <select class="form-control datepicker" id="select-variable-second">
+            <option value="Elevation">Elevation</option>
+            <option value="Depth">Depth</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-2">
+    <div class="card ">
+      <div class="card-body ">
+        <div class="form-group bmd-form-group is-filled">
+          <select class="form-control datepicker" id="select-class-type">
+            <option value="borehole">By Bore Hole</option>
+            <option value="machine">By Machine Type</option>
+            <option value="boreholeandmachine">By Bore Hole and Machine Type</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-2">
+    <div class="card ">
+      <div class="card-body ">
+        <div class="form-group bmd-form-group is-filled">
+          <select class="form-control datepicker" id="select-chart">
+            <option value="Scatter">Scatter plot</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% include 'includes/chartsprofile.html' %}
+{% include 'includes/profileform.html' %}
 </div>
 {% endblock content %}
 
@@ -124,39 +174,25 @@
 <script src="/static/custom/js/chart.js"></script>
 
 <script type="text/javascript">
-  var headings = '{{headings|safe}}';
-  var holes = '{{hole|safe}}';
-  var projectname = '{{ project.name|safe }}'
-  var projectid = '{{ project.id|safe }}'
-
-  // charts
   var chartlist = '{{ chartlist|safe }}'
   var chartjson = '{{ chartjson|safe }}'
   var chartlist = JSON.parse(chartlist);
   var chartjson = JSON.parse(chartjson);
 
-  var headings = JSON.parse(headings);
-  var hole_data = JSON.parse(holes);
-
-  var hole_list = []
-  for (var key in hole_data) {
-    hole_list.push(key);
-  }
-  var headings_factual = headings.factual
   chartdiv = ['drawChart-first','drawChart-second','drawChart-third',
               'drawChart-fourth','drawChart-five','drawChart-six',
               'drawChart-seven','drawChart-eight','drawChart-nine',
-              'drawChart-ten','drawChart-eleven','drawChart-twel']
+              'drawChart-ten','drawChart-eleven','drawChart-twel']      
   for (i = 0; i < chartlist.length; i++) {
       chartnumber = i+2
       id = '#'+chartnumber.toString()+'chart'
       $(id).removeClass('hide');
       chartvalues = chartjson[chartlist[i]]
-      userChartDrawFunction(chartdiv[i],chartvalues.ags,chartvalues.v1,chartvalues.v2,chartvalues.classtype,chartvalues.chart,chartvalues.ags_text);
+      userChartDrawFunctionStatic(chartdiv[i],chartvalues.ags,chartvalues.v1,chartvalues.v2,chartvalues.classtype,chartvalues.chart,chartvalues.ags_text);
     } 
-  var chartdict = {};
+  var chartdict = chartjson;
   
-  function userChartDrawFunction(chartDiv,ags,v1,v2,classtype,chart,ags_text) {
+  function userChartDrawFunctionStatic(chartDiv,ags,v1,v2,classtype,chart,ags_text) {
     var dataRequest = {
       ags: ags,
       v1: v1,
@@ -172,8 +208,160 @@
         genericLineChart(arranged_data, chartDiv, v1 + " vs " + v2, "Derived from " + ags_text+ " for " +classtype, 'SIZE', 'PERP')
       }
       else if(v1== 'Water Level'){
-        // var arranged_data = genericlineData(data)
-        console.log(data)
+        genericBarChart(data, chartDiv, v1 + " vs " + v2, "Derived from " + ags_text, 'Bore Hole', 'Elevation (MSL)')
+      }
+      else{
+        var arranged_data = genericScatterPlotData(data)
+        genericScatterPlot(arranged_data, chartDiv, v1 + " vs " + v2, "Derived from " + ags_text, yaxis, 'Elevation (MSL)',)
+      }
+    });
+  };
+
+</script>
+
+<script type="text/javascript">
+  var headings = '{{headings|safe}}';
+  var holes = '{{hole|safe}}';
+  var projectname = '{{ project.name|safe }}'
+  var projectid = '{{ project.id|safe }}'
+
+  var headings = JSON.parse(headings);
+  var hole_data = JSON.parse(holes);
+  var hole_list = []
+  for (var key in hole_data) {
+    hole_list.push(key);
+  }
+  var headings_factual = headings.factual
+  $('#select-variable-first').empty()
+  for (i = 0; i < headings_factual.length; i++) {
+    $('#select-variable-first').append($('<option>', { value: headings_factual[i], text: headings_factual[i] }));
+  }
+
+  $('#select-variable-first').on('change', function () {
+    $('#select-variable-second').empty()
+    $('#select-class-type').empty()
+    $('#select-chart').empty()
+    if ($('#select-variable-first').val() == 'Particle Size') {
+      $('#select-variable-second').append($('<option>', { value: 'Percentage Passing (%)', text: 'Percentage Passing (%)' }));
+      get_borhole_list()
+      $('#select-chart').append($('<option>', { value: 'Line Chart', text: 'Line chart' }));
+    }
+    else if ($('#select-variable-first').val() == 'Water Level') {
+      $('#select-variable-second').append($('<option>', { value: 'Elevation', text: 'Elevation' }));
+        general_key = ['By Bore Hole','By Machine Type','By Bore Hole and Machine Type']
+        general_value = ['borehole','machine','boreholeandmachine']
+        for (i = 0; i < general_value.length; i++) {
+          $('#select-class-type').append($('<option>', { value: general_value[i], text: general_key[i] }));
+        }
+        $('#select-chart').append($('<option>', { value: 'barchart', text: 'Barchart' }));
+    }
+    else{
+      $('#select-variable-second').append($('<option>', { value: 'Elevation', text: 'Elevation' }));
+        $('#select-variable-second').append($('<option>', { value: 'Depth', text: 'Depth' }));
+        general_key = ['By Bore Hole','By Machine Type','By Bore Hole and Machine Type']
+        general_value = ['borehole','machine','boreholeandmachine']
+        for (i = 0; i < general_value.length; i++) {
+          $('#select-class-type').append($('<option>', { value: general_value[i], text: general_key[i] }));
+        } 
+        $('#select-chart').append($('<option>', { value: 'scatter plot', text: 'Scatter plot' }));
+    }
+  });
+
+  $('#select-ags-file').on('change', function () {
+    $('#select-variable-first').empty()
+    $('#select-variable-second').empty()
+    $('#select-class-type').empty()
+    for (i = 0; i < headings_factual.length; i++) {
+      $('#select-variable-first').append($('<option>', { value: headings_factual[i], text: headings_factual[i] }));
+    }
+    $('#select-variable-second').append($('<option>', { value: 'Elevation', text: 'Elevation' }));
+    $('#select-variable-second').append($('<option>', { value: 'Depth', text: 'Depth' }));
+    general_key = ['By Bore Hole','By Machine Type','By Bore Hole and Machine Type']
+    general_value = ['borehole','machine','boreholeandmachine']
+    for (i = 0; i < general_value.length; i++) {
+          $('#select-class-type').append($('<option>', { value: general_value[i], text: general_key[i] }));
+        } 
+      });
+  
+  var chartCounter = 6
+  $('#extra-chart').click(function () {
+    id = '#'+chartCounter.toString()+'chart'
+    if(chartCounter == 12){
+      $('#extra-chart').addClass('hide');
+    }
+    $(id).removeClass('hide');
+    chartCounter = chartCounter+2
+  });
+
+  $('#drawChart-first-apply').click(function () {
+    userChartDrawFunction("drawChart-first");
+  });
+  $('#drawChart-second-apply').click(function () {
+    userChartDrawFunction("drawChart-second");
+  });
+  $('#drawChart-third-apply').click(function () {
+    userChartDrawFunction("drawChart-third");
+  });
+  $('#drawChart-fourth-apply').click(function () {
+    userChartDrawFunction("drawChart-fourth");
+  });
+
+  $('#drawChart-five-apply').click(function () {
+    userChartDrawFunction("drawChart-five");
+  });
+  $('#drawChart-six-apply').click(function () {
+    userChartDrawFunction("drawChart-six");
+  });
+  $('#drawChart-seven-apply').click(function () {
+    userChartDrawFunction("drawChart-seven");
+  });
+  $('#drawChart-eight-apply').click(function () {
+    userChartDrawFunction("drawChart-eight");
+  });
+
+  $('#drawChart-nine-apply').click(function () {
+    userChartDrawFunction("drawChart-nine");
+  });
+  $('#drawChart-ten-apply').click(function () {
+    userChartDrawFunction("drawChart-ten");
+  });
+  $('#drawChart-eleven-apply').click(function () {
+    userChartDrawFunction("drawChart-eleven");
+  });
+  $('#drawChart-twel-apply').click(function () {
+    userChartDrawFunction("drawChart-twel");
+  });
+
+  function userChartDrawFunction(chartDiv) {
+    var chartinnerdict = {};
+    var ags = $('#select-ags-file').val();
+    var ags_text = $("#select-ags-file option:selected").text();
+    var v1 = $('#select-variable-first').val();
+    var v2 = $('#select-variable-second').val();
+    var classtype = $('#select-class-type').val();
+    var chart = $('#select-chart').val();
+    chartinnerdict['ags'] = ags
+    chartinnerdict['v1'] = v1
+    chartinnerdict['v2'] = v2
+    chartinnerdict['classtype'] = classtype
+    chartinnerdict['chart'] = chart
+    chartinnerdict['ags_text'] = ags_text
+    chartdict[chartDiv] = chartinnerdict
+    var dataRequest = {
+      ags: ags,
+      v1: v1,
+      v2: v2,
+      classtype: classtype,
+      chart: chart
+    };
+    $.get("{% url 'ajax-chart-project' %}", dataRequest).done(function (data) {
+      var data = data.chart_data;
+      yaxis = v1.split("Vs")[0];
+      if(v1=='Particle Size'){
+        var arranged_data = genericlineData(data)
+        genericLineChart(arranged_data, chartDiv, v1 + " vs " + v2, "Derived from " + ags_text+ " for " +classtype, 'SIZE', 'PERP')
+      }
+      else if(v1== 'Water Level'){
         genericBarChart(data, chartDiv, v1 + " vs " + v2, "Derived from " + ags_text, 'Bore Hole', 'Elevation (MSL)')
       }
       else{
@@ -190,62 +378,58 @@
       ags: ags
     };
     $.get("{% url 'ajax-chart-borehole' %}", dataRequest).done(function (data) {
-      console.log(data.boreholes.length)
       for (i = 0; i < data.boreholes.length; i++) {
-        console.log(data.boreholes[i])
           $('#select-class-type').append($('<option>', { value: data.boreholes[i], text: data.boreholes[i] }));
         }
     });
   };
 
-</script>
-<script src="/static/custom/js/map.js"></script>
+  function profile_edit(){
+    for (i = 0; i < chartlist.length; i++) {
+      chartnumber = i+1
+      id = '#profile-edit-'+chartnumber.toString()
+      $(id).removeClass('hide');
+    } 
+    $('#profile-filter').removeClass('hide');
+    $('#myBtn').removeClass('hide');
+  }
 
+</script>
+
+<script>
+  // Get the modal
+  var modal = document.getElementById("myModal");
+
+  // Get the button that opens the modal
+  var btn = document.getElementById("myBtn");
+  
+  // Get the <span> element that closes the modal
+  var span = document.getElementsByClassName("close")[0];
+  
+  // When the user clicks the button, open the modal 
+  btn.onclick = function() {
+    modal.style.display = "block";
+    $("#profilechartlist").val(JSON.stringify(chartdict, null, 2));
+    $("#profileprojectname").val(projectname);
+    $("#profileprojectid").val(projectid);
+  }
+  
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+  
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+  </script>
+<script src="/static/custom/js/map.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.58/pdfmake.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.58/vfs_fonts.js"></script>
 
-<script>
-  function downloadPDF() {
-    // get div content
-    const content = document.getElementById("content").innerHTML;
-
-    // create canvas image of the chart
-    const canvas = document.getElementById("drawChart-first");
-    const canvasImg = canvas.toDataURL("image/png");
-
-    // create PDF document definition
-    const documentDefinition = {
-      content: [
-        { text: "Map and Chart", style: "header" },
-        {
-          image: canvasImg,
-          width: 500,
-          height: 300
-        },
-        {
-          text: "Map",
-          style: "subheader"
-        },
-        {
-          html: content
-        }
-      ],
-      styles: {
-        header: {
-          fontSize: 18,
-          bold: true
-        },
-        subheader: {
-          fontSize: 14,
-          bold: true,
-          margin: [0, 10, 0, 5]
-        }
-      }
-    };
-
-    pdfMake.createPdf(documentDefinition).download("map-and-chart.pdf");
-  }
-</script>
 {% endblock javascripts %}
 
 
