--- a/apps/templates/layouts/base-landing-nikos.html
+++ b/apps/templates/layouts/base-landing-nikos.html
@@ -89,6 +89,15 @@
 			</a>
 		</div>
 	</div>
+	<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
+		<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+
+		
+		<a href="{% url 'login' %}" data-toggle="modal" data-target="#loginModal" class="w3-bar-item w3-button"><i
+					class="fa fa-user"></i> LOGIN</a>
+		<a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+
+	</nav>
 	{% block content %}{% endblock content %}
 	<footer class="w3-center w3-black w3-padding-64">
 		<div class="w3-xlarge w3-section">
@@ -97,5 +106,23 @@
 				class="w3-hover-text-green">© 2022 Orycta.com.</a></p>
 	</footer>
 </body>
+<script>
+	
+		// Toggle between showing and hiding the sidebar when clicking the menu icon
+		var mySidebar = document.getElementById("mySidebar");
+	
+		function w3_open() {
+			if (mySidebar.style.display === 'block') {
+				mySidebar.style.display = 'none';
+			} else {
+				mySidebar.style.display = 'block';
+			}
+		}
+	
+		// Close the sidebar with the close button
+		function w3_close() {
+			mySidebar.style.display = "none";
+		}
+	</script>
 
 </html>
