--- a/apps/static/assets/css/material-dashboard.css
+++ b/apps/static/assets/css/material-dashboard.css
@@ -1930,8 +1930,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #2196f3;
-  border-color: #2196f3;
+  background-color: #342229;
+  border-color: #342229;
   box-shadow: none; }
   .btn-primary:hover {
     color: #ffffff;
@@ -1941,8 +1941,8 @@ fieldset:disabled a.btn {
     box-shadow: none, 0 0 0 0.2rem rgba(33, 150, 243, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #ffffff;
-    background-color: #2196f3;
-    border-color: #2196f3; }
+    background-color: #342229;
+    border-color: #342229; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #ffffff;
@@ -2121,24 +2121,24 @@ fieldset:disabled a.btn {
       box-shadow: none, 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
 
 .btn-outline-primary {
-  color: #2196f3;
+  color: #342229;
   background-color: transparent;
   background-image: none;
-  border-color: #2196f3; }
+  border-color: #342229; }
   .btn-outline-primary:hover {
     color: #ffffff;
-    background-color: #2196f3;
-    border-color: #2196f3; }
+    background-color: #342229;
+    border-color: #342229; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(33, 150, 243, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #2196f3;
+    color: #342229;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #ffffff;
-    background-color: #2196f3;
-    border-color: #2196f3; }
+    background-color: #342229;
+    border-color: #342229; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(33, 150, 243, 0.5); }
@@ -2501,7 +2501,7 @@ tbody.collapse.show {
   .dropdown-item.active, .dropdown-item:active {
     color: #ffffff;
     text-decoration: none;
-    background-color: #2196f3; }
+    background-color: #342229; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     background-color: transparent; }
@@ -2738,7 +2738,7 @@ tbody.collapse.show {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #ffffff;
-    background-color: #2196f3;
+    background-color: #342229;
     box-shadow: none; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 1px #fafafa, 0 0 0 0.2rem rgba(33, 150, 243, 0.25); }
@@ -2782,13 +2782,13 @@ tbody.collapse.show {
   border-radius: 0.25rem; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #2196f3; }
+  background-color: #342229; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23ffffff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  background-color: #2196f3;
+  background-color: #342229;
   box-shadow: none; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -2804,7 +2804,7 @@ tbody.collapse.show {
   border-radius: 50%; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #2196f3; }
+  background-color: #342229; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23ffffff'/%3E%3C/svg%3E"); }
@@ -2952,7 +2952,7 @@ tbody.collapse.show {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #ffffff;
-  background-color: #2196f3; }
+  background-color: #342229; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3464,7 +3464,7 @@ tbody.collapse.show {
   padding: 0.5rem 0.75rem;
   margin-left: 0;
   line-height: 1.25;
-  color: #2196f3;
+  color: #342229;
   background-color: transparent;
   border: 0 solid #dee2e6; }
   .page-link:hover {
@@ -3491,8 +3491,8 @@ tbody.collapse.show {
 .page-item.active .page-link {
   z-index: 1;
   color: #ffffff;
-  background-color: #2196f3;
-  border-color: #2196f3; }
+  background-color: #342229;
+  border-color: #342229; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3656,7 +3656,7 @@ tbody.collapse.show {
   justify-content: center;
   color: #ffffff;
   text-align: center;
-  background-color: #2196f3;
+  background-color: #342229;
   transition: width 0.6s ease; }
 
 .progress-bar-striped {
@@ -3714,8 +3714,8 @@ tbody.collapse.show {
   .list-group-item.active {
     z-index: 2;
     color: #ffffff;
-    background-color: #2196f3;
-    border-color: #2196f3; }
+    background-color: #342229;
+    border-color: #342229; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -3861,7 +3861,7 @@ button.close {
 
 .badge-primary {
   color: #ffffff;
-  background-color: #2196f3; }
+  background-color: #342229; }
   .badge-primary[href]:hover, .badge-primary[href]:focus {
     color: #ffffff;
     text-decoration: none;
@@ -4421,7 +4421,7 @@ button.close {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #2196f3 !important; }
+  background-color: #342229 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -4521,7 +4521,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #2196f3 !important; }
+  border-color: #342229 !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -6253,7 +6253,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #2196f3 !important; }
+  color: #342229 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #0c7cd5 !important; }
@@ -10180,8 +10180,8 @@ a[aria-expanded="true"] .caret,
     .sidebar .nav li .dropdown-menu a:hover,
     .sidebar .nav li .dropdown-menu a:focus,
     .sidebar .nav li.active > [data-toggle="collapse"] {
-      background-color: rgba(200, 200, 200, 0.2);
-      color: #3C4858;
+      background-color: #342229;
+      color: #ffffff;
       box-shadow: none; }
     .sidebar .nav li.active > [data-toggle="collapse"] i {
       color: #a9afbb; }
