--- a/apps/templates/layouts/base-landing-nikos.html
+++ b/apps/templates/layouts/base-landing-nikos.html
@@ -6,14 +6,14 @@
 <link rel="stylesheet" href="/static/frontend/css/base.css">
 <link rel="stylesheet" href="/static/frontend/css/fonts.css">
 <link rel="stylesheet" href="/static/frontend/css/font-awesome.min.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css'>
+<link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
 <!-- Style CSS -->
 <link rel="stylesheet" href="/static/frontend/css/style.css">
 <!-- Demo CSS -->
 <link rel="stylesheet" href="/static/frontend/css/demo.css">
 <!-- Icons from the web -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="https://kit.fontawesome.com/234e9ca2cf.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/234e9ca2cf.js"></script>
 
 <style>
 	body,
@@ -76,8 +76,7 @@
 <body>
 	<div class="w3-top">
 		<div class="w3-bar w3-white w3-card" id="myNavbar">
-			<!-- <a href="#home" class="w3-bar-item w3-button w3-wide">ORYCTA</a> -->
-			<a href="#home" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets/landing/images/ORYCTA-LOGO.png"></a>
+		<a href="#home" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets/landing/images/logo.png"></a>
 			<div class="w3-right w3-hide-small">
 				<a href="{% url 'login' %}" data-toggle="modal" data-target="#loginModal" class="w3-bar-item w3-button"><i
 						class="fa fa-user"></i> LOGIN</a>
