--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -44,7 +44,7 @@
         easy so that you can draw meaningful decisions and turn geotechnical risk into a unique competitive advantage.
       </p>
       <p>Decode. Manage. Store. Share.
-      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Geo-data platform [Coming soon]</a></p>
+      <p><a href="{% url 'login' %}" class="w3-button w3-black"><i class="fa fa-th"> </i> Geo-data platform [Coming soon]</a></p>
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="/static/assets/landing/images/2.jpg" alt="Buildings" width="800"
